# stock-price-simulator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
az_batch/: az_utils.py  batch.py  run.py
az_batch/node/: task.py
notebooks/: Stock Price Simulator.ipynb
notebooks/.ipynb_checkpoints/: Stock Price Simulator-checkpoint.ipynb
stock_price_simulator/: run.py  simulate.py  ticker.py
tests/: test_stock_price_simulator.py
