[tool.poetry]
name = "stock-price-simulator"
version = "0.1.0"
description = ""
authors = ["fei.cheng <fei.cheng@oliverwyman.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
pandas = "^1.4.3"
yfinance = "^0.1.74"
pandas-market-calendars = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
